--- a/certificate.html
+++ b/certificate.html
@@ -97,7 +97,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box iconbox-orange ">
-              <img src="D:\rutuja\portfolio\Kelly\assets\img\WhatsApp Image 2023-12-28 at 4.33.39 PM.jpeg" class="img-fluid" alt="">
+              <img src="https://github.com/rutujanaikwadi16/portfolio.github.io/blob/main/assets/img/WhatsApp%20Image%202023-12-28%20at%204.33.39%20PM.jpeg" class="img-fluid" alt="">
 
              <!-- <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
